# ctkPythonConsole

./: CMakeLists.txt  package.xml
cmake/: ctk_python_console.cmake
src/: CMakeLists.txt  ctkAbstractPythonManager.cpp
