<?xml version="1.0"?>
<package format="2">
    <name>ctk_python_console</name>
    <version>1.0.0</version>
    <description>ctk_python_console</description>
    <maintainer email="pat@marion.com">Pat Marion</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>python_qt</depend>
</package>
